--- a/webperfection/package.json
+++ b/webperfection/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://webperfection.github.io",
+  "homepage": "https://WebPerfection.github.io",
   "name": "webperfection",
   "version": "0.1.0",
   "private": true,
